--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
+
 *{
     margin: 0; padding: 0;
     text-decoration: none;
@@ -12,31 +14,55 @@ body{
     background-color: lightblue;
 }
 
-.nav{
+.sns{
     display: flex;
     background-color: #fff;
-    padding: 20px 40px;
-    border-radius: 5px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 40px;
+    border-radius: 7px;
     box-sizing: border-box;
 }
-.nav li{
-    margin: 30px;
-}
-.nav li a{
-    position: relative;
-    color: #666;
+
+.sns li{
+    margin: 20px;
+    border: 1px solid #fff;
+    width: 80px; height: 80px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 80px;
+    overflow: hidden;
 }
 
-.nav li a::after{
+.sns li a{
+    position: relative;
+    display: inline-block;
+    font-size: 36px;
+    color: #333;
+    width: 100%; height: 100%;
+}
+
+.sns li a::before{
     content: '';
     position: absolute;
-    width: 0; height: 2px;
-    background-color: dodgerblue;
-    bottom: -5px; left: 0;
+    bottom: 0; left: 0;
+    background-color: blue;
+    width: 100%; height: 0;
     transition: 0.3s;
+
 }
 
-.nav li:hover a::after{
-    width: 100%;
+.sns li:hover a::before{
+    height: 100%;
 }
+
+.sns li .fa{
+    transition: 0.5s;
+} 
+
+.sns li:hover .fa {
+    transform: rotateY(360deg);
+    color: #fff;
+  }
+  
+  
+  
