--- a/style.css
+++ b/style.css
@@ -1,68 +1,31 @@
 @import url('https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
 
+
 *{
     margin: 0; padding: 0;
     text-decoration: none;
     list-style: none;
+    color: #000;
 }
 
 body{
+    
+}
+
+.gallery{
     display: flex;
-    justify-content: center;
-    align-items: center;
     height: 100vh;
-    background-color: lightblue;
 }
-
-.sns{
-    display: flex;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 40px;
-    border-radius: 7px;
-    box-sizing: border-box;
-}
-
-.sns li{
-    margin: 20px;
-    border: 1px solid #fff;
-    width: 80px; height: 80px;
-    border-radius: 50%;
-    text-align: center;
-    line-height: 80px;
-    overflow: hidden;
-}
-
-.sns li a{
-    position: relative;
-    display: inline-block;
-    font-size: 36px;
-    color: #333;
-    width: 100%; height: 100%;
-}
-
-.sns li a::before{
-    content: '';
-    position: absolute;
-    bottom: 0; left: 0;
-    background-color: blue;
-    width: 100%; height: 0;
+.gallery li{
+    flex: 1;
+    background-image: url(/images/artistic-image-01.jpg);
+    background-repeat: no-repeat;
     transition: 0.3s;
-
 }
-
-.sns li:hover a::before{
-    height: 100%;
+.gallery:hover li{
+    flex: 1;
 }
-
-.sns li .fa{
-    transition: 0.5s;
-} 
-
-.sns li:hover .fa {
-    transform: rotateY(360deg);
-    color: #fff;
-  }
-  
-  
-  
+.gallery li:hover{
+    flex: 3;
+}
+.content{}
