--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@import url('https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
 
 
 *{
@@ -8,24 +7,68 @@
     color: #000;
 }
 
-body{
+a{
+    text-decoration: none;
+}
+
+.wrap{
     
 }
 
-.gallery{
-    display: flex;
-    height: 100vh;
+input[id=ham]{
+    display: none;
 }
-.gallery li{
-    flex: 1;
-    background-image: url(/images/artistic-image-01.jpg);
-    background-repeat: no-repeat;
+
+label[for=ham]{
+    transition: 0.3s;
+    position: absolute;
+    top: 50%; right: 10px;
+    transform: translateY(-50%);
+    width: 30px; height: 23px;
+}
+
+label[for=ham] span{
+    position: absolute;
+    left: 0;
+    width: 100%; height: 2px;
+    background-color: blue;
     transition: 0.3s;
 }
-.gallery:hover li{
-    flex: 1;
+
+.sidebar{
+    position: fixed;
+    right: -100%;
+    width: 200px; height: 100vh;
+    background-color: #000;
+    transition: 0.3s;
 }
-.gallery li:hover{
-    flex: 3;
+
+label[for=ham] span:nth-child(1){
+    top: 0;
 }
-.content{}
+label[for=ham] span:nth-child(2){
+    top: 50%;
+}
+label[for=ham] span:nth-child(3){
+    top: 100%;
+}
+
+input[id=ham]:checked + label[for=ham] span:nth-child(1){
+    top: 50%;
+    transform: rotate(45deg);
+}
+input[id=ham]:checked + label[for=ham] span:nth-child(2){
+    display: none;
+}
+input[id=ham]:checked + label[for=ham] span:nth-child(3){
+    top: 50%;
+    transform: rotate(-45deg);
+}
+
+input[id=ham]:checked + label[for=ham]{
+    right: 210px;
+}
+
+input[id=ham]:checked ~ .sidebar{
+    right: 0;
+}
