--- a/style.css
+++ b/style.css
@@ -11,64 +11,68 @@ a{
     text-decoration: none;
 }
 
-.wrap{
-    
+header{
+    display: flex;
+    justify-content: space-between;
+    background-color: yellowgreen;
+    padding: 20px;
+    box-sizing: border-box;
 }
 
-input[id=ham]{
-    display: none;
+.logo{
+    display: flex;
+    align-items: center;
 }
 
-label[for=ham]{
-    transition: 0.3s;
-    position: absolute;
-    top: 50%; right: 10px;
-    transform: translateY(-50%);
-    width: 30px; height: 23px;
+.logo i{
+    font-size: 20px;
+    margin-right: 3px;
 }
 
-label[for=ham] span{
-    position: absolute;
-    left: 0;
-    width: 100%; height: 2px;
-    background-color: blue;
-    transition: 0.3s;
+.logo h1{
+    font-weight: normal;
+    font-size: 20px;
 }
 
-.sidebar{
-    position: fixed;
-    right: -100%;
-    width: 200px; height: 100vh;
-    background-color: #000;
-    transition: 0.3s;
+.nav{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 0;
 }
 
-label[for=ham] span:nth-child(1){
-    top: 0;
-}
-label[for=ham] span:nth-child(2){
-    top: 50%;
-}
-label[for=ham] span:nth-child(3){
-    top: 100%;
+.nav li{
+    margin: 0 20px;
 }
 
-input[id=ham]:checked + label[for=ham] span:nth-child(1){
-    top: 50%;
-    transform: rotate(45deg);
+.icons{
+    display: flex;
+    align-items: center;
 }
-input[id=ham]:checked + label[for=ham] span:nth-child(2){
-    display: none;
-}
-input[id=ham]:checked + label[for=ham] span:nth-child(3){
-    top: 50%;
-    transform: rotate(-45deg);
+.icons li{
+    margin: 5px;
 }
 
-input[id=ham]:checked + label[for=ham]{
-    right: 210px;
-}
+@media screen and (max-width:768px) {
+    header{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 
-input[id=ham]:checked ~ .sidebar{
-    right: 0;
+    .logo{
+        width: 100%;
+        align-items: flex-start;
+        margin-bottom: 10px;
+    }
+
+    .nav{
+        flex-direction: column;
+    }
+
+    .nav li{
+        width: 100%;
+        text-align: center;
+        margin: 10px 0;
+    }
 }
