--- a/style.css
+++ b/style.css
@@ -4,75 +4,82 @@
     margin: 0; padding: 0;
     text-decoration: none;
     list-style: none;
-    color: #000;
+    /* color: #000; */
+}
+
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
 a{
     text-decoration: none;
 }
 
-header{
+.items{
     display: flex;
-    justify-content: space-between;
-    background-color: yellowgreen;
-    padding: 20px;
+}
+
+.item{
+    position: relative;
+    width: 300px; height: 400px;
+    margin-right: 20px;
+    overflow: hidden;
+    transition: 0.3s;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+}
+
+.content{
+    position: absolute;
+    top: 100%; left: 0;
+    width: 100%; height: 100%;
+    text-align: center;
+    color: #fff;
+    padding-top: 200px;
     box-sizing: border-box;
+    transition: 0.3s;
 }
 
-.logo{
-    display: flex;
-    align-items: center;
+.content h2 span{
+    display: block;
+    font-size: 14px;
+    color: goldenrod;
+    margin-bottom: 30px;
 }
 
-.logo i{
-    font-size: 20px;
-    margin-right: 3px;
-}
-
-.logo h1{
-    font-weight: normal;
-    font-size: 20px;
-}
-
-.nav{
+.sns{
     display: flex;
     justify-content: center;
-    align-items: center;
-    margin-right: 0;
 }
 
-.nav li{
-    margin: 0 20px;
+.sns li{
+    margin-right: 10px;
+    border: 1px solid #fff;
+    width: 25px; height: 25px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 25px;
+}
+.sns li a{
+    color: #fff;
 }
 
-.icons{
-    display: flex;
-    align-items: center;
-}
-.icons li{
-    margin: 5px;
+.item:hover .content{
+    top: 0;
 }
 
-@media screen and (max-width:768px) {
-    header{
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
+.item:hover{
+    transform: translateY(-20px);
+}
 
-    .logo{
-        width: 100%;
-        align-items: flex-start;
-        margin-bottom: 10px;
-    }
-
-    .nav{
-        flex-direction: column;
-    }
-
-    .nav li{
-        width: 100%;
-        text-align: center;
-        margin: 10px 0;
-    }
+.item:nth-child(1) .content{
+    background: linear-gradient(to top, crimson, transparent);
+}
+.item:nth-child(2) .content{
+    background: linear-gradient(to top, lightblue, transparent);
+}
+.item:nth-child(3) .content{
+    background: linear-gradient(to top, yellowgreen, transparent);
 }
