--- a/style.css
+++ b/style.css
@@ -14,72 +14,65 @@ body{
     height: 100vh;
 }
 
-a{
-    text-decoration: none;
-}
-
-.items{
-    display: flex;
-}
-
-.item{
-    position: relative;
-    width: 300px; height: 400px;
-    margin-right: 20px;
-    overflow: hidden;
-    transition: 0.3s;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-}
-
-.content{
-    position: absolute;
-    top: 100%; left: 0;
-    width: 100%; height: 100%;
+.wrap{
+    width: 800px;
     text-align: center;
-    color: #fff;
-    padding-top: 200px;
+    background-color: #ddd;
+    padding: 20px;
     box-sizing: border-box;
-    transition: 0.3s;
+}
+.heading{}
+.heading h1{
+    font-size: 30px;
+}
+.heading h1 span{
+    color: crimson;
+}
+.heading input[type=text]{
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
 }
 
-.content h2 span{
-    display: block;
-    font-size: 14px;
-    color: goldenrod;
-    margin-bottom: 30px;
+.tab-inner{
+    border: 1px solid reds;
+    margin-top: 30px;
 }
 
-.sns{
+.btn{
     display: flex;
-    justify-content: center;
+}
+.btn li{
+    padding: 10px 25px;
+    border-top: 2px solid transparent;
+    background-color: #ededed;
+    border-right: 1px solid #ddd;
+    cursor: pointer;
+}
+.btn li:hover,
+.btn li.active{
+    background-color: #fff;
+    border-top: 2px solid crimson;
 }
 
-.sns li{
-    margin-right: 10px;
-    border: 1px solid #fff;
-    width: 25px; height: 25px;
-    border-radius: 50%;
-    text-align: center;
-    line-height: 25px;
+.items{}
+.item{
+    display: none;
+    height: 300px;
+    padding: 20px;
+    box-sizing: border-box;
 }
-.sns li a{
-    color: #fff;
+.item h2{
+    margin-bottom: 20px;
 }
-
-.item:hover .content{
-    top: 0;
+.item img{
+    float: left;
+    margin-right: 20px;
 }
-
-.item:hover{
-    transform: translateY(-20px);
+.item p{
+    text-align: justify;
 }
-
-.item:nth-child(1) .content{
-    background: linear-gradient(to top, crimson, transparent);
-}
-.item:nth-child(2) .content{
-    background: linear-gradient(to top, lightblue, transparent);
-}
-.item:nth-child(3) .content{
-    background: linear-gradient(to top, yellowgreen, transparent);
+.item.active{
+    display: block;
+    background-color: #fff;
 }
